@@ -1,3 +1,8 @@
+Sun Mar  8 17:13:33 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* Makefile.am: Rewrote.  Library now named libgnomesupport, now
+	installed if Gnome support code is built.
+
 Sat Mar  7 00:03:26 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* gnome-argp.h (__mempcpy): New define.
